--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<title>{% if page.title %}{{page.title}}{% endif %}</title>
+  <meta charset="utf-8">
+  <title>{% if page.title %}{{page.title}}{% endif %}</title>
+  <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
+  {% if page.custom_css %}
+    {% for stylesheet in page.custom_css %}
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/{{ stylesheet }}.css" media="screen" type="text/css">
+    {% endfor %}
+  {% endif %}  
 
 
-<link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>test</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">  
 
+  <body>
 
+    {% include header.html %} {{content}} {% include footer.html %}
 
-<!--Let browser know website is optimized for mobile-->
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>test</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script  src="http://code.jquery.com/jquery-3.3.1.min.js"  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
+    <!-- <script src="{{site.baseurl}}/assets/js/main.js" type="text/javascript"></script> -->
+    <script src="{{site.baseurl}}/assets/js/debounce.js" type="text/javascript"></script>    
 
-<body>
+    {% if page.custom_js %}
+      {% for js_file in page.custom_js %}
+        <script src='{{site.baseurl}}/assets/js/{{ js_file }}.js' type="text/javascript"></script>
+      {% endfor %}
+    {% endif %}
 
-{% include header.html %}
-
-
-{{content}}
-
-
-{% include footer.html %}
-
-<script
-  src="http://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-  crossorigin="anonymous"></script>
-
-<script src="/assets/js/main.js" type="text/javascript"></script> 
-
-</body>
+  </body>
 
 </html>
