--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,8 @@
 @import "base/__base-dir.scss";
 @import "component/__component-dir.scss";
 @import "layout/__layout-dir.scss";
+@import "pages/__page-dir.scss";
+
 
 
 a {
