--- a/assets/css/component/_button.scss
+++ b/assets/css/component/_button.scss
@@ -1,7 +1,10 @@
 .btn {
+  width: 230px;
   display: block;
-  color: $red;
+  // height: 38px;
+  color: $main;
   border-color: transparent;
+  text-align: center;
 
   &:disabled,
   &.disabled {
@@ -9,10 +12,34 @@
   }
 
   &.index {
-    width: 230px;
+    
     color: $white;
     background: $main;
     height: 38px;
+  }
+}
+
+a {
+  &.button-link {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: solid 1px $main;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    background: $main;
+    color: $white;
+    text-decoration: none;
+    padding: 8px 12px;
+    width: 230px;
+    text-decoration: none;
+    font-size: larger;
+    text-align: center;
+    &:hover {
+      color: $white;
+    }
   }
 }
 
@@ -20,3 +47,7 @@
 .btn.alt {
   color: $blue;
 }
+
+// .slick-arrow {
+//   background: $accent !important;
+// }
