--- a/assets/css/component/_timeline.scss
+++ b/assets/css/component/_timeline.scss
@@ -22,7 +22,7 @@
     height: 100%;
     width: 4px;
     background: $main;
-    z-index: 2;
+    // z-index: 2;
     @media (max-width: 499px) and (min-width: 250px) {
       left: 75px;
     }
@@ -151,7 +151,7 @@
         // top: 180px;
         // right: -12px;
         display: block;
-        z-index: 2;
+        z-index: 1;
         width: 15px;
         height: 15px;
         border: 3px solid $white;
