--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <script  src="http://code.jquery.com/jquery-3.3.1.min.js"  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
     <!-- <script src="{{site.baseurl}}/assets/js/main.js" type="text/javascript"></script> -->
-    <script src="{{site.baseurl}}/assets/js/debounce.js" type="text/javascript"></script>    
+    <script src="{{site.baseurl}}/assets/js/iranmap.js" type="text/javascript"></script>    
 
     {% if page.custom_js %}
       {% for js_file in page.custom_js %}
