--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -15,3 +15,24 @@ input, textarea, select, button {
     font-family: IRANSans;
     font-weight: 300;
 }
+
+
+.my-prev.slick-arrow {
+  position: absolute;
+  right: 0;
+  top: 45%;
+  margin-right: -100px;
+  font-size: 100px;  
+  color: $main;  
+}
+
+.my-next.slick-arrow {
+  position: absolute;
+  top: 45%;
+  left: 0;
+  font-size: 100px;
+  margin-left: -100px;
+  
+    color: $main;
+  
+}
