--- a/assets/css/layout/_navigation.scss
+++ b/assets/css/layout/_navigation.scss
@@ -504,11 +504,105 @@ header {
                 .left {
                   width: 400px;
                   margin-right: 30px;
-                  .map-container {
+                  #map-container {                    
                     margin-top: 30px;
-                    background: rgba(255, 255, 255, 0.8);
+                    // background: rgba(255, 255, 255, 0.8);
                     width: 350px;
                     height: 350px;
+                    background: url(/assets/images/all-states.png) 0 0;                    
+                    &.west-azar {
+                      background: url(/assets/images/all-states.png) 1050px 0;
+                    }
+                    &.east-azar {
+                      background: url(/assets/images/all-states.png) 1400px 0;
+                    }
+                    &.ardabil {
+                      background: url(/assets/images/all-states.png) 700px 0;
+                    }
+                    &.isfahan {
+                      background: url(/assets/images/all-states.png) 350px 0;
+                    }
+                    &.alborz {
+                      background: url(/assets/images/all-states.png) 0 -350px;
+                    }                    
+                    &.ilam {
+                      background: url(/assets/images/all-states.png) -350px -350px;
+                    }   
+                    &.booshehr {
+                      background: url(/assets/images/all-states.png) -700px -350px;
+                    }   
+                    &.tehran {
+                      background: url(/assets/images/all-states.png) -1050px -350px;
+                    }   
+                    &.cha-and-ba {
+                      background: url(/assets/images/all-states.png) -1400px -350px;
+                    }   
+                    &.south-khorasan {
+                      background: url(/assets/images/all-states.png) 0 -700px;
+                    }   
+                    &.razavi-khorasan {
+                      background: url(/assets/images/all-states.png) -350px -700px;
+                    }   
+                    &.north-khorasan {
+                      background: url(/assets/images/all-states.png) -700px -700px;
+                    }   
+                    &.khoozestan {
+                      background: url(/assets/images/all-states.png) -1050px -700px;
+                    }   
+                    &.zanjan {
+                      background: url(/assets/images/all-states.png) -1400px -700px;
+                    }   
+                    &.semnan {
+                      background: url(/assets/images/all-states.png) 0 -1050px;
+                    }   
+                    &.sis-and-bal {
+                      background: url(/assets/images/all-states.png) -350px -1050px;
+                    }   
+                    &.fars {
+                      background: url(/assets/images/all-states.png) -700px -1050px;
+                    }   
+                    &.qazvin {
+                      background: url(/assets/images/all-states.png) -1050px -1050px;
+                    }   
+                    &.qom {
+                      background: url(/assets/images/all-states.png) -1400px -1050px;
+                    }   
+                    &.kordestan {
+                      background: url(/assets/images/all-states.png) 0 -1400px;
+                    }   
+                    &.kerman {
+                      background: url(/assets/images/all-states.png) -350px -1400px;
+                    }   
+                    &.kermanshah {
+                      background: url(/assets/images/all-states.png) -700px -1400px;
+                    }   
+                    &.ko-and-bo {
+                      background: url(/assets/images/all-states.png) -1050px -1400px;
+                    }   
+                    &.golestan {
+                      background: url(/assets/images/all-states.png) -1400px -1400px;
+                    }   
+                    &.gilan {
+                      background: url(/assets/images/all-states.png) 0 -1750px;
+                    }   
+                    &.lorestan {
+                      background: url(/assets/images/all-states.png) -350px -1750px;
+                    }   
+                    &.mazandaran {
+                      background: url(/assets/images/all-states.png) -700px -1750px;
+                    }   
+                    &.markazi {
+                      background: url(/assets/images/all-states.png) -1050px -1750px;
+                    }   
+                    &.hormozgan {
+                      background: url(/assets/images/all-states.png) -1400px -1750px;
+                    }   
+                    &.hamedan {
+                      background: url(/assets/images/all-states.png) 0 -2100px;
+                    }   
+                    &.yazd {
+                      background: url(/assets/images/all-states.png) -350px -2100px;
+                    }   
                   }
                 }
               }
