--- a/assets/css/component/_hero.scss
+++ b/assets/css/component/_hero.scss
@@ -1,3 +1,15 @@
+#hero-slider {
+  max-height: 500px;     
+  height: 500px;  
+  @media (max-width: 1199px){
+    height: 400px;
+  }  
+  @media (max-width: 600px){
+    height: 300px;
+  }
+}
+
+
 .hero {
   height: 50%;
   background-position: center;
