--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -1,41 +1,849 @@
-// .arrow {
-//   &.down {
-//     bottom: -58px;
-//   }
-//   &.up {
-//     top: -58px;
-//   }
-//   @media (max-width: 1024px) {
-//     display: none;
-//   }  
-//   position: absolute;
-//   z-index: 2;
-//   font-size: 100px;
-//   color: $white;
-//   background: rgba(0, 0, 0, 0.4);
-//   width: 99%;
-//   text-align: center;
-//   vertical-align: middle;
-//   //   top: 100%;
-//   //   right: 22%;
-//   .down {
-//     // top: 100%;
-//     // right: 22%;
-//     cursor: pointer;
-//     margin-left: -25px;
-//     > div {
-//       -webkit-transform: rotate(90deg);
-//       -ms-transform: rotate(90deg);
-//       transform: rotate(90deg);
-//     }
-//   }
-//   .up {
-//     cursor: pointer;
-//     margin-left: -24px;
-//     > div {
-//       -webkit-transform: rotate(90deg);
-//       -ms-transform: rotate(90deg);
-//       transform: rotate(90deg);
-//     }
-//   }
-// }
+section {
+  background: $white;
+  &.dark {
+    background: $dark-bg;
+    .title {
+      background: $dark-bg;
+    }
+  }
+  .title {
+    position: relative;
+    width: fit-content;
+    font-size: 32px;
+    top: 8px;
+    z-index: 2;
+    background: $white;
+  }
+}
+
+.poi {
+  margin: 50px 130px;
+  .title {
+    top: -24px;
+  }
+  .parent {
+    border-top: 1px solid $main;
+    padding-top: 30px;
+    width: 100%;
+    margin: 0 130px;
+    height: 550px;
+    margin: auto;
+    display: flex;
+    flex-direction: row-reverse;
+    .left {
+      width: 50%;
+      .image {
+        cursor: pointer;
+        height: 550px;
+        background: $white;
+        box-sizing: border-box;
+        position: relative;
+        margin-right: 5px;
+        .name {
+          position: absolute;
+          text-align: center;
+          min-width: 250px;
+          max-width: 350px;
+          font-size: 24px;
+          color: $white;
+          background: rgba(0, 0, 0, 0.5);
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          padding: 20px;
+        }
+        img {
+          width: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+    .right {
+      width: 50%;
+      flex: 1;
+      height: 550px;
+      //   background: lime;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      overflow: hidden;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+      .image {
+        cursor: pointer;
+        width: 50%;
+        height: 275px;
+        background: $white;
+        box-sizing: border-box;
+        position: relative;
+        padding: 1px;
+        .name {
+          position: absolute;
+          text-align: center;
+          min-width: 150px;
+          max-width: 250px;
+          color: $white;
+          background: rgba(0, 0, 0, 0.5);
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          padding: 20px;
+        }
+        img {
+          width: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+  }
+  .arrow {
+    width: 50%;
+    height: 40px;
+    background: rgba(0, 0, 0, 0.5);
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+    //   margin-top: -40px;
+    &.down {
+      position: relative;
+      margin-top: -40px;
+      color: white;
+      display: flex;
+      > div {
+        padding: 5px;
+        margin: auto;
+        transform: translateX(11%) translateY(-5%) rotate(270deg);
+        font-size: 100px;
+        text-align: center;
+      }
+    }
+    &.up {
+      position: relative;
+      margin-bottom: -71px;
+      color: white;
+      display: flex;
+      > div {
+        padding: 5px;
+        margin: auto;
+        transform: translateX(11%) translateY(-55%) rotate(270deg);
+        font-size: 100px;
+        text-align: center;
+      }
+    }
+  }
+  .bottom {
+    display: flex;
+    justify-content: flex-end;
+    margin: 50px 0;
+  }
+  @media (max-width: 1025px) {
+    margin: 50px 30px;
+  }
+  @media (max-width: 900px) {
+    .parent {
+      .left {
+        display: none;
+      }
+    }
+    .arrow {
+      width: 100%;
+    }
+  }
+  @media (max-width: 600px) {
+    .parent {
+      .right {
+        .image {
+          width: 100%;
+        }
+      }
+    }
+    .arrow {
+      width: 100%;
+    }
+  }
+}
+
+.roi {
+  max-height: 650px;
+  margin: 30px 130px;
+  .title {
+    top: -24px;
+  }
+  .parent {
+    border-top: 1px solid $main;
+    padding-top: 30px;
+    width: 100%;
+    margin: 0 130px;
+    height: 550px;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    .left {
+      flex: 1;
+      .image {
+        cursor: pointer;
+        height: 550px;
+        background: $white;
+        box-sizing: border-box;
+        position: relative;
+        margin-left: 10px;
+        .name {
+          position: absolute;
+          text-align: center;
+          min-width: 250px;
+          max-width: 350px;
+          font-size: 24px;
+          color: $white;
+          background: rgba(0, 0, 0, 0.5);
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          padding: 20px;
+        }
+        img {
+          width: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+    .right {
+      flex: 0 0 400px;
+      height: 550px;
+      //   background: lime;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      .image {
+        cursor: pointer;
+        width: 100%;
+        background: $white;
+        box-sizing: border-box;
+        position: relative;
+        .name {
+          position: absolute;
+          text-align: center;
+          min-width: 150px;
+          max-width: 250px;
+          color: $white;
+          background: rgba(0, 0, 0, 0.5);
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          padding: 20px;
+        }
+        img {
+          width: 100%;
+          object-fit: cover;
+          max-height: 200px;
+        }
+      }
+    }
+  }
+  .arrow {
+    width: 400px;
+    height: 40px;
+    display: flex;
+    background: rgba(0, 0, 0, 0.5);
+    position: relative;
+    z-index: 1;
+    left: calc(-100% + 400px);
+    cursor: pointer;
+    //   margin-top: -40px;
+    &.down {
+      position: relative;
+      margin-top: -40px;
+      color: white;
+      display: flex;
+      > div {
+        padding: 5px;
+        // margin: auto;
+        transform: translateX(-150%) translateY(65%) rotate(-90deg);
+        font-size: 100px;
+        text-align: center;
+      }
+    }
+    &.up {
+      position: relative;
+      margin-bottom: -71px;
+      color: white;
+      display: flex;
+      > div {
+        padding: 5px;
+        // margin: auto;
+        transform: translateX(-150%) translateY(-65%) rotate(-90deg);
+        font-size: 100px;
+        text-align: center;
+      }
+    }
+  }
+  .bottom {
+    display: flex;
+    justify-content: flex-end;
+    margin: 50px 0;
+  }
+  @media (max-width: 1025px) {
+    margin: 50px 30px;
+  }
+  @media (max-width: 900px) {
+    .parent {
+      .left {
+        display: none;
+      }
+      .right {
+        flex: 1;
+        flex-direction: row;
+        flex-wrap: wrap;
+        .image {
+          width: 50%;
+          height: 275px;
+          padding: 1px;
+          img {
+            max-height: none;
+          }
+        }
+      }
+    }
+    .arrow {
+      width: 100%;
+      left: auto;
+      &.down {
+        > div {
+          padding: 5px;
+          margin: auto;
+          transform: translateX(11%) translateY(-5%) rotate(270deg);
+          font-size: 100px;
+          text-align: center;
+        }
+      }
+
+      &.up {
+        > div {
+          padding: 5px;
+          margin: auto;
+          transform: translateX(11%) translateY(-55%) rotate(270deg);
+          font-size: 100px;
+          text-align: center;
+        }
+      }
+    }
+  }
+  @media (max-width: 600px) {
+    .parent {
+      .right {
+        .image {
+          width: 100%;
+        }
+      }
+    }
+    .arrow {
+      width: 100%;
+    }
+  }
+}
+
+.boomgardi {
+  margin: 30px 130px;
+  .title {
+    position: relative;
+    width: fit-content;
+    top: 8px;
+    z-index: 2;
+    background: $white;
+  }
+  .slider.residence {
+    border-top: 1px solid $main;
+    padding-top: 30px;
+  }
+  .bottom {
+    display: flex;
+    justify-content: flex-end;
+    margin: 50px 0;
+  }
+  .slider {
+    &.residence {
+      .center {
+        .slick-slide {
+          position: relative;
+        }
+        .image {
+          .name {
+            position: absolute;
+            font-size: 24px;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            width: 300px;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.4);
+            a {
+              color: $white;
+            }
+          }
+          img {
+            height: 500px;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 1025px) {
+    // min-height: 750px;
+    margin: 20px;
+    .title {
+      top: 25px;
+    }
+    .bottom {
+      position: relative;
+      // top: 100px;
+      left: 20px;
+    }
+
+    .slider {
+      &.residence {
+        margin: 20px 20px;
+        height: auto;
+        min-height: 300px;
+        align-items: center;
+        .center {
+          .image {
+            .name {
+              font-size: 18px;
+              width: 250px;
+            }
+            img {
+              height: 300px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.villages {
+  margin: 30px 130px;
+  .title {
+    position: relative;
+    width: fit-content;
+    top: 8px;
+    z-index: 2;
+    background: $white;
+  }
+  .slider.village {
+    border-top: 1px solid $main;
+    padding-top: 30px;
+  }
+  .bottom {
+    display: flex;
+    justify-content: flex-end;
+    margin: 50px 0;
+  }
+  .slider {
+    &.village {
+      // display: flex;
+      // height: 501px;
+      // max-height: 501px;
+      // align-items: center;
+      // flex-direction: row;
+      .center {
+        .slick-slide {
+          position: relative;
+          padding: 0 10px;
+          .image {
+            // padding: 0 20px;
+            border-left: 10px solid $white;
+            border-right: 10px solid $white;
+          }
+          .text {
+            direction: rtl;
+            padding: 20px;
+            background: $main;
+            margin: 10px -10px 0 -10px;
+            color: $white;
+            h5 {
+              font-size: 20px;
+              margin-bottom: 10px;
+            }
+            p {
+              text-align: justify;
+              line-height: 20px;
+              font-size: 14px;
+            }
+          }
+        }
+        .image {
+          clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+
+          img {
+            height: 320px;
+            object-fit: cover;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 1025px) {
+    // min-height: 750px;
+    margin: 30px;
+    .title {
+      top: 25px;
+    }
+    .bottom {
+      position: relative;
+      // top: 100px;
+      left: 20px;
+    }
+
+    .slider {
+      &.village {
+        margin: 20px 20px;
+        height: auto;
+        min-height: 300px;
+        align-items: center;
+        .center {
+          .image {
+            .name {
+              font-size: 18px;
+              width: 250px;
+            }
+            img {
+              height: 300px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.residentials {
+  .title {
+    top: -24px;
+  }
+  max-height: 650px;
+  margin: 30px 130px;
+  .parent {
+    border-top: 1px solid $main;
+    padding-top: 30px;
+    width: 100%;
+    margin: 0 130px;
+    height: 550px;
+    margin: auto;
+    display: flex;
+    flex-direction: row-reverse;
+    .left {
+      flex: 1;
+      .image {
+        cursor: pointer;
+        height: 550px;
+        background: $white;
+        box-sizing: border-box;
+        position: relative;
+        margin-right: 10px;
+        .name {
+          position: absolute;
+          text-align: center;
+          min-width: 250px;
+          max-width: 350px;
+          font-size: 24px;
+          color: $white;
+          background: rgba(0, 0, 0, 0.5);
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          padding: 20px;
+        }
+        img {
+          width: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+    .right {
+      flex: 0 0 400px;
+      height: 550px;
+      //   background: lime;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      .image {
+        cursor: pointer;
+        width: 100%;
+        background: $white;
+        box-sizing: border-box;
+        position: relative;
+        .name {
+          position: absolute;
+          text-align: center;
+          min-width: 150px;
+          max-width: 250px;
+          color: $white;
+          background: rgba(0, 0, 0, 0.5);
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          padding: 20px;
+        }
+        img {
+          width: 100%;
+          object-fit: cover;
+          max-height: 200px;
+        }
+      }
+    }
+  }
+  .arrow {
+    width: 400px;
+    height: 40px;
+    display: flex;
+    background: rgba(0, 0, 0, 0.5);
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+    &.down {
+      position: relative;
+      margin-top: -40px;
+      color: white;
+      display: flex;
+      > div {
+        padding: 5px;
+        // margin: auto;
+        transform: translateX(-150%) translateY(65%) rotate(-90deg);
+        font-size: 100px;
+        text-align: center;
+      }
+    }
+    &.up {
+      position: relative;
+      margin-bottom: -71px;
+      color: white;
+      display: flex;
+      > div {
+        padding: 5px;
+        // margin: auto;
+        transform: translateX(-150%) translateY(-65%) rotate(-90deg);
+        font-size: 100px;
+        text-align: center;
+      }
+    }
+  }
+  .bottom {
+    display: flex;
+    justify-content: flex-end;
+    margin: 50px 0;
+  }
+  @media (max-width: 1025px) {
+    margin: 50px 30px;
+  }
+  @media (max-width: 900px) {
+    .parent {
+      .left {
+        display: none;
+      }
+      .right {
+        flex: 1;
+      }
+    }
+    .arrow {
+      width: 100%;
+      left: auto;
+      &.down {
+        > div {
+          padding: 5px;
+          margin: auto;
+          transform: translateX(11%) translateY(-5%) rotate(270deg);
+          font-size: 100px;
+          text-align: center;
+        }
+      }
+
+      &.up {
+        > div {
+          padding: 5px;
+          margin: auto;
+          transform: translateX(11%) translateY(-55%) rotate(270deg);
+          font-size: 100px;
+          text-align: center;
+        }
+      }
+    }
+  }
+  @media (max-width: 600px) {
+    .parent {
+      .right {
+        .image {
+          width: 100%;
+        }
+      }
+    }
+    .arrow {
+      width: 100%;
+    }
+  }
+}
+
+.events {
+  padding: 30px 0;
+  min-height: 450px;
+  background: $dark-bg;
+  .events-container {
+    margin: 30px 130px;
+    .title {
+      top: -16px;
+      background: $dark-bg;
+    }
+
+    .body {
+      display: flex;
+      flex-direction: row;
+      padding-top: 75px;
+      border-top: 1px solid $main;
+
+      .right {
+        flex: 1;
+        max-height: 515px;
+        overflow-y: hidden;
+        .event {
+          display: flex;
+          flex-direction: row;
+          padding: 20px 0;
+          border-bottom: 1px solid;
+          .event_photo {
+            img {
+              width: 200px;
+              max-height: 200px;
+              object-fit: fill;
+            }
+          }
+          .event_text {
+            margin: 0 40px;
+            h5 {
+              font-size: 20px;
+              margin-bottom: 20px;
+            }
+            p {
+              text-align: justify;
+              line-height: 24px;
+              max-height: 50px;
+              margin-bottom: 10px;
+              overflow-y: hidden;
+            }
+          }
+
+          .event_date {
+            flex: 0 0 100px;
+            display: flex;
+            justify-content: center;
+            margin: auto;
+            font-size: 20px;
+            text-align: center;
+          }
+        }
+      }
+
+      .left {
+        flex: 0 0 200px;
+        .title {
+          font-size: 60px;
+          //   height: 200px;
+          -webkit-transform: rotate(-90deg);
+          -ms-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+          float: left;
+          position: relative;
+          top: 230px;
+          color: $main;
+        }
+
+        @media (max-width: 1300px) {
+          flex: 0 0 150px;
+          .title {
+            font-size: 40px;
+          }
+        }
+      }
+    }
+
+    .arrow {
+      width: 100%;
+      height: 40px;
+      display: flex;
+      background: rgba(0, 0, 0, 0.5);
+      position: relative;
+      z-index: 1;
+      cursor: pointer;
+      //   margin-top: -40px;
+      &.down {
+        position: relative;
+        color: white;
+        display: flex;
+        > div {
+          padding: 5px;
+          // margin: auto;
+          transform: translateX(-150%) translateY(65%) rotate(-90deg);
+          font-size: 100px;
+          text-align: center;
+          width: 25%;
+        }
+      }
+      &.up {
+        position: relative;
+        margin-bottom: -71px;
+        color: white;
+        display: flex;
+        > div {
+          padding: 5px;
+          width: 25%;
+          // margin: auto;
+          transform: translateX(-150%) translateY(-65%) rotate(-90deg);
+          font-size: 100px;
+          text-align: center;
+        }
+      }
+    }
+
+    .bottom {
+      display: flex;
+      justify-content: flex-end;
+      margin: 45px 0;
+    }
+    @media (max-width: 1025px) {
+      margin: 50px 30px;
+      .body {
+        .left {
+          display: none;
+        }
+      }
+    }
+    @media (max-width: 900px) {    
+    }
+    @media (max-width: 600px) {
+      .body {
+        .right {
+          .event {
+            .event_photo {
+              display: none;
+            }
+            .event_date {
+              flex: 0 0 50px;
+              font-size: 14px;
+              line-height: 20px;
+            }
+            .event_text {
+              h5 {
+                font-size: 18px;
+              }
+            }
+          }
+        }
+      }
+      
+    }
+      
+
+  }
+}
