--- a/assets/css/component/_timeline.scss
+++ b/assets/css/component/_timeline.scss
@@ -345,6 +345,9 @@
         &:hover {
           color: $main;
         }
+        &.active {
+          color: $main;
+        }
       }
       li {
         display: flex;
