--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,11 @@
 <footer>
     <div class="top">
-        <div class="socials">
+        <div class="logo">
+            <a href="http://ichto.ir" target="_blank">
+                <img style="width:100px; height:auto;" src="{{site.baseurl}}/assets/images/ichto-logo.jpg">                
+            </a>   
+        </div>
+        <div class="socials">             
             <a href="#">
                 <i class="fa fa-facebook"></i>
             </a>
@@ -17,7 +22,7 @@
                 <i class="fa fa-pinterest"></i>
             </a>
         </div>
-        <div class="subscription">
+        <!-- <div class="subscription">
             <div class="label">ایمیل خود را وارد نمایید</div>
             <div class="input">
                 <input type="text">
@@ -25,22 +30,16 @@
             <div class="button">
                 <input type="button" value="ثبت نام">
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="menu">
-        <ul>
-            <li>
-                <a href="#">منوی اصلی</a>
-            </li>
+        <ul>           
             <li>
                 <a href="#">درباره ما</a>
             </li>
             <li>
-                <a href="#">تلگرام</a>
-            </li>
-            <li>
-                <a href="#">تماس با ما</a>
-            </li>
+                <a href="#">تلفن های ضروری </a>
+            </li>          
             <li>
                 <a href="#">سوالات متداول</a>
             </li>
