--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -16,14 +16,20 @@ footer {
   }
   .top {
     display: flex;
-    flex-direction: column;    
+    flex-direction: row;    
     padding: 0 20px;
     padding-top: 50px;
     @include for-size(desktop-up) {
       padding: 0 150px;
       padding-top: 50px;
     }    
-    .socials {      
+    .logo {
+      flex: 0 0 100px;
+    }
+    .socials {   
+      text-align: left;
+      align-self: center;
+      flex: 1;   
       a {
         padding: 0 5px;
       }
