--- a/assets/css/layout/_navigation.scss
+++ b/assets/css/layout/_navigation.scss
@@ -14,8 +14,8 @@ header {
   }
   input + label {
     position: fixed;
-    top: 40px;
-    left: 40px;
+    top: 35px;
+    left: 35px;
     height: 20px;
     width: 15px;
     z-index: 5;
@@ -71,7 +71,7 @@ header {
     > ul {
       text-align: center;
       position: absolute;
-      top: 35%;
+      top: 20%;
       left: 20%;
       right: 20%;
       > li {
@@ -83,7 +83,6 @@ header {
           text-transform: uppercase;
           color: $black;
           font-weight: 700;
-          font-family: sans-serif;
           display: block;
           padding: 30px;
         }
@@ -110,16 +109,16 @@ header {
     background: $white;
     img {
       width: 80px;
-      height: 80px;
+      height: 79px;
       object-fit: cover;
     }
   }
 
   .primary-menu-wrapper {
     .top {
-      position: fixed;      
+      position: fixed;
       top: 90px;
-      right: 130px;      
+      right: 130px;
       z-index: 4;
       .top-filler {
         width: 100vw;
@@ -136,7 +135,7 @@ header {
         position: fixed;
         top: 65px;
         right: 96px;
-        z-index: 11px;
+        z-index: 2;
         background: rgba(0, 0, 0, 0.1);
       }
       .middle {
@@ -149,7 +148,7 @@ header {
         font-size: 13px;
         position: relative;
         top: -50px;
-        left: 15px;
+        left: 40px;
         ul {
           li {
             display: inline-block;
@@ -169,9 +168,54 @@ header {
                 color: $main;
               }
             }
-            &:nth-child(1),
+            // &:nth-child(1),
             &:nth-child(3) {
               display: none;
+            }
+            &.search {
+              border: none;
+              padding: 0 10px 0 0;
+            }
+
+            #frmSearch {              
+              width: 150px;
+              position: relative;
+              top: -8px;
+              z-index: 2;
+              .search-input {      
+                width: 150px;          
+                direction: rtl;
+                text-align: right;                
+                box-sizing: border-box;
+                border: none;
+                border-radius: 4px;
+                font-size: 13px;
+                background-color: lightgray;
+                // background-image: url("../images/search-icon.png");
+                background-position: 0 -4px;
+                background-repeat: no-repeat;
+                background-size: 40px 40px;
+                padding: 5px 0px;
+                box-sizing: border-box;
+                -webkit-transition: width 0.4s ease-in-out;
+                transition: width 0.4s ease-in-out;
+                outline: 0 none;
+                padding: 5px 20px;
+                z-index: 3;                
+              }
+
+              .btn-submit-search {
+                position: absolute; 
+                background-image: url("../images/search-icon.png");   
+                background-size: 40px 40px;      
+                width: 40px;
+                top: -5px;
+                left: 0;      
+                background-position: 0 -4px;
+                background-repeat: no-repeat;          
+                border: none;
+                height: 32px;
+              }
             }
           }
         }
@@ -191,6 +235,16 @@ header {
         background: $white;
         color: $black;
         font-size: 13px;
+        cursor: pointer;
+        &.flag {
+          position: relative;
+          top: 2px;
+          height: 20px;
+          img {
+            width: 20px;
+            height: auto;
+          }
+        }
       }
 
       .dropdown-content {
@@ -225,7 +279,11 @@ header {
     .buttom {
       .dropdown {
         &:hover .dropdown-content {
-          display: none;
+          display: block;
+          right: -100px;
+          box-shadow: none;
+          min-width: 300px;
+          text-align: center;
         }
 
         .dropdown-btn {
@@ -239,8 +297,19 @@ header {
         li {
           padding: 10px 0;
         }
+        // .ostanha {
+        //   visibility: hidden;
+        // }
       }
     }
+  }
+}
+
+@media (max-width: 769px) {
+  #frmSearch {   
+    .search-input {      
+      background: lightgray !important;                     
+    }    
   }
 }
 
@@ -250,7 +319,7 @@ header {
       .top {
         .container .middle {
           display: block;
-          position: fixed;          
+          position: fixed;
           top: 1px;
           right: 50%;
           a {
@@ -270,11 +339,27 @@ header {
               &:nth-child(2) {
                 border-right: 0;
               }
-
+              &.search {
+                border-left: none;
+              }
               &:nth-child(1),
               &:nth-child(3) {
                 display: inline-block;
               }
+              #frmSearch {        
+                
+                .search-input {
+                  width: 180px;   
+                  background: white;               
+                  position: relative;
+                  top: 8px;
+                }
+                .btn-submit-search {
+                  z-index: 3;
+                  top: 3px;
+                }
+              }
+              
             }
           }
         }
@@ -282,7 +367,6 @@ header {
     }
   }
 }
-
 
 @media screen and (max-width: 1199px) and (min-width: 900px) {
   header .primary-menu-wrapper .top .container .middle {
@@ -385,6 +469,14 @@ header {
                 color: $accent-fc;
                 font-size: 13px;
                 padding: 0 20px;
+                &.flag {
+                  position: relative;
+                  top: 5px;
+                  img {
+                    width: 20px;
+                    height: auto;
+                  }
+                }
               }
 
               .dropdown-content {
@@ -411,9 +503,9 @@ header {
         display: flex;
         flex-direction: row;
         background-color: $white;
-        position: static;        
-        outline: 1px solid rgba(0, 0, 0, 0.1);        
-        align-items: center;       
+        position: static;
+        outline: 1px solid rgba(0, 0, 0, 0.1);
+        align-items: center;
         ul {
           position: static;
           width: 100%;
@@ -447,12 +539,14 @@ header {
 
           .dropdown-content {
             display: none;
+            text-align: right !important;
             position: absolute;
             background-color: $white;
-            min-width: 200px;
+            min-width: 200px !important;
             max-width: 300px;
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             z-index: 1;
+            right: auto !important;
             a {
               color: $menu-black;
               padding: 12px 16px;
@@ -463,7 +557,7 @@ header {
               }
             }
             &.map {
-              min-width: 1000px;
+              min-width: 1000px !important;
               width: 1000px;
               .map-menu-wrapper {
                 background-color: $main;
@@ -504,105 +598,105 @@ header {
                 .left {
                   width: 400px;
                   margin-right: 30px;
-                  #map-container {                    
+                  #map-container {
                     margin-top: 30px;
                     // background: rgba(255, 255, 255, 0.8);
                     width: 350px;
                     height: 350px;
-                    background: url(/assets/images/all-states.png) 0 0;                    
+                    background: url(../images/all-states.png) 0 0;
                     &.west-azar {
-                      background: url(/assets/images/all-states.png) 1050px 0;
+                      background: url(../images/all-states.png) 1050px 0;
                     }
                     &.east-azar {
-                      background: url(/assets/images/all-states.png) 1400px 0;
+                      background: url(../images/all-states.png) 1400px 0;
                     }
                     &.ardabil {
-                      background: url(/assets/images/all-states.png) 700px 0;
+                      background: url(../images/all-states.png) 700px 0;
                     }
                     &.isfahan {
-                      background: url(/assets/images/all-states.png) 350px 0;
+                      background: url(../images/all-states.png) 350px 0;
                     }
                     &.alborz {
-                      background: url(/assets/images/all-states.png) 0 -350px;
-                    }                    
+                      background: url(../images/all-states.png) 0 -350px;
+                    }
                     &.ilam {
-                      background: url(/assets/images/all-states.png) -350px -350px;
-                    }   
+                      background: url(../images/all-states.png) -350px -350px;
+                    }
                     &.booshehr {
-                      background: url(/assets/images/all-states.png) -700px -350px;
-                    }   
+                      background: url(../images/all-states.png) -700px -350px;
+                    }
                     &.tehran {
-                      background: url(/assets/images/all-states.png) -1050px -350px;
-                    }   
+                      background: url(../images/all-states.png) -1050px -350px;
+                    }
                     &.cha-and-ba {
-                      background: url(/assets/images/all-states.png) -1400px -350px;
-                    }   
+                      background: url(../images/all-states.png) -1400px -350px;
+                    }
                     &.south-khorasan {
-                      background: url(/assets/images/all-states.png) 0 -700px;
-                    }   
+                      background: url(../images/all-states.png) 0 -700px;
+                    }
                     &.razavi-khorasan {
-                      background: url(/assets/images/all-states.png) -350px -700px;
-                    }   
+                      background: url(../images/all-states.png) -350px -700px;
+                    }
                     &.north-khorasan {
-                      background: url(/assets/images/all-states.png) -700px -700px;
-                    }   
+                      background: url(../images/all-states.png) -700px -700px;
+                    }
                     &.khoozestan {
-                      background: url(/assets/images/all-states.png) -1050px -700px;
-                    }   
+                      background: url(../images/all-states.png) -1050px -700px;
+                    }
                     &.zanjan {
-                      background: url(/assets/images/all-states.png) -1400px -700px;
-                    }   
+                      background: url(../images/all-states.png) -1400px -700px;
+                    }
                     &.semnan {
-                      background: url(/assets/images/all-states.png) 0 -1050px;
-                    }   
+                      background: url(../images/all-states.png) 0 -1050px;
+                    }
                     &.sis-and-bal {
-                      background: url(/assets/images/all-states.png) -350px -1050px;
-                    }   
+                      background: url(../images/all-states.png) -350px -1050px;
+                    }
                     &.fars {
-                      background: url(/assets/images/all-states.png) -700px -1050px;
-                    }   
+                      background: url(../images/all-states.png) -700px -1050px;
+                    }
                     &.qazvin {
-                      background: url(/assets/images/all-states.png) -1050px -1050px;
-                    }   
+                      background: url(../images/all-states.png) -1050px -1050px;
+                    }
                     &.qom {
-                      background: url(/assets/images/all-states.png) -1400px -1050px;
-                    }   
+                      background: url(../images/all-states.png) -1400px -1050px;
+                    }
                     &.kordestan {
-                      background: url(/assets/images/all-states.png) 0 -1400px;
-                    }   
+                      background: url(../images/all-states.png) 0 -1400px;
+                    }
                     &.kerman {
-                      background: url(/assets/images/all-states.png) -350px -1400px;
-                    }   
+                      background: url(../images/all-states.png) -350px -1400px;
+                    }
                     &.kermanshah {
-                      background: url(/assets/images/all-states.png) -700px -1400px;
-                    }   
+                      background: url(../images/all-states.png) -700px -1400px;
+                    }
                     &.ko-and-bo {
-                      background: url(/assets/images/all-states.png) -1050px -1400px;
-                    }   
+                      background: url(../images/all-states.png) -1050px -1400px;
+                    }
                     &.golestan {
-                      background: url(/assets/images/all-states.png) -1400px -1400px;
-                    }   
+                      background: url(../images/all-states.png) -1400px -1400px;
+                    }
                     &.gilan {
-                      background: url(/assets/images/all-states.png) 0 -1750px;
-                    }   
+                      background: url(../images/all-states.png) 0 -1750px;
+                    }
                     &.lorestan {
-                      background: url(/assets/images/all-states.png) -350px -1750px;
-                    }   
+                      background: url(../images/all-states.png) -350px -1750px;
+                    }
                     &.mazandaran {
-                      background: url(/assets/images/all-states.png) -700px -1750px;
-                    }   
+                      background: url(../images/all-states.png) -700px -1750px;
+                    }
                     &.markazi {
-                      background: url(/assets/images/all-states.png) -1050px -1750px;
-                    }   
+                      background: url(../images/all-states.png) -1050px -1750px;
+                    }
                     &.hormozgan {
-                      background: url(/assets/images/all-states.png) -1400px -1750px;
-                    }   
+                      background: url(../images/all-states.png) -1400px -1750px;
+                    }
                     &.hamedan {
-                      background: url(/assets/images/all-states.png) 0 -2100px;
-                    }   
+                      background: url(../images/all-states.png) 0 -2100px;
+                    }
                     &.yazd {
-                      background: url(/assets/images/all-states.png) -350px -2100px;
-                    }   
+                      background: url(../images/all-states.png) -350px -2100px;
+                    }
                   }
                 }
               }
@@ -625,4 +719,8 @@ header {
   header .primary-menu-wrapper .top {
     padding-left: 0;
   }
+}
+
+#frmSearch {
+  display: inline;
 }
