--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -471,6 +471,8 @@ section {
               text-align: justify;
               line-height: 20px;
               font-size: 14px;
+              height: 80px;
+              overflow: hidden;
             }
           }
         }
